# cmon-proxy

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEBUG.md  Dockerfile.build  Dockerfile.local  Makefile  README.md  RELEASE.md  ccmgr.yaml.sample  cmon-proxy.yaml.sample  config.js  ecosystem.config.cjs  go.mod  go.sum  main.go
.github/workflows/: build_lintasarta_staging.yaml  ccmgr-build-push.yaml  docker-image-build-push.yaml  go.yml  patch-to-release.yaml
auth/: auth.go
auth/internal/whoami/: whoami.go
auth/jwt/: jwt.go
auth/providers/cmon/: cmon_provider.go
auth/providers/cmonproxy/: cmonproxy_provider.go
auth/secret/: secret.go
auth/user/: auth_context.go  user.go
ccmgradm/: helpers.go  main.go
cmon/: account.go  alarm.go  audit.go  backup.go  client.go  client_test.go  cluster.go  info.go  job.go  log.go  ping.go  poolcontrollers.go  process.go  stats.go
cmon/api/: account.go  alarm.go  audit.go  auth.go  backup.go  cluster.go  cluster_test.go  cmon_int.go  common.go  event.go  group.go  host.go  job.go  job_test.go  log.go  null_time.go  null_time_test.go  ping.go  poolcontrollers.go  process.go  stats.go  stats_test.go  user.go
config/: config.go  config_test.go
deploy/: cmon-proxy-production.yaml  cmon-proxy-staging.yaml  google.json
docker/: .gitignore  Dockerfile  Dockerfile.build  Dockerfile.builder  Dockerfile.local  entrypoint.sh
docs/: ARCHICTECTURE-METERING.md  ARCHITECTURE-METERING-OPENTELEMETRY.md  README-METERING.md  README-OPENTELEMETRY.md  architecture-metering.md  readme-metering.md
docs/specs/: 2026-04-16-usage-metering-design.md
env/: env_dev.go  env_prod.go
etc/default/: cmon-proxy.env
etc/systemd/system/: .gitignore  cmon-proxy.service.in
k8s/: client.go
k8s-proxy-client/: client.go
logger/: logger.go
metering/: collector.go  collector_test.go  integration_test.go  models.go  report.go  report_test.go  router_adapter.go  sealing.go  sealing_test.go  soak_test.go  sqlite.go  sqlite_test.go  status.go  status_test.go  storage.go
multi/: admin.go  alarms.go  audit.go  authentication.go  backups.go  cluster_source.go  clusters.go  config.go  controllers.go  controllers_test.go  enable.go  jobs.go  k8s.go  logs.go  mcc.go  pool.go  pool_source.go  proxy.go  ratelimit.go  ratelimit_test.go  single_controller_pool_support.go  telemetry.go  telemetry_auth_test.go  telemetry_test.go  telemetry_tls_test.go
multi/api/: alarms.go  audit.go  backups.go  clusterlist.go  clustersoverview.go  common.go  config.go  controlleraddremove.go  controllerstatus.go  enable.go  hostlist.go  instancepreferences.go  jobs.go  k8s.go  logs.go  mcc.go  pool.go  user.go
multi/router/: router.go
opts/: opts.go
otel/: emitter.go  emitter_test.go  emitter_xid_test.go  logrecord.go  provider.go  provider_test.go
poolhelpers/: pool_controller_helpers.go  pool_controller_helpers_test.go
proxy/: admin.go  alarms.go  auth.go  authentication.go  backups.go  client.go  clusters.go  controllers.go  jobs.go  multiclient.go  proxy.go  router.go
proxy/api/: alarms.go  backups.go  clusterlist.go  clustersoverview.go  common.go  controlleraddremove.go  controllerstatus.go  hostlist.go  jobs.go  user.go
proxy/router/: router.go
retry/: README.md  retry.go  retry_test.go
rpcserver/: cors.go  metering.go  metering_test.go  otel_emitter.go  otel_emitter_test.go  pool_controller_helpers.go  pool_controller_helpers_test.go  server.go  server_test.go  tls.go
rpcserver/session/: session.go
scripts/: postinst  prerm  start-soak-emitter.sh
simpletestclient/: main.go
